# crucible-trader

./: .env.example  .eslintrc.cjs  .gitignore  Agents.md  CI_CD.md  CLAUDE.md  TESTING.md  TEST_RESULTS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: test.yml
.husky/: pre-commit  pre-push
.serena/: project.yml
apps/web/: next.config.mjs  package.json  tsconfig.json  tsconfig.test.json  tsconfig.tsbuildinfo
apps/web/src/: index.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/strategies/: route.ts
apps/web/src/app/api/strategies/[id]/: route.ts
apps/web/src/app/api/strategies/[id]/favorite/: route.ts
apps/web/src/app/api/strategies/validate/: route.ts
apps/web/src/app/datasets/: page.tsx
apps/web/src/app/new-run/: StrategyControls.tsx  date-range.ts  helpers.ts  page.tsx  strategyControls.test.tsx
apps/web/src/app/reports/: page.tsx
apps/web/src/app/risk/: page.tsx
apps/web/src/app/runs/: page.tsx
apps/web/src/app/runs/[runId]/: page.tsx
apps/web/src/app/strategies/: page.tsx
apps/web/src/app/strategies/[id]/edit/: page.tsx
apps/web/src/app/strategies/new/: page.tsx
apps/web/src/components/: lightweight-chart.tsx
apps/web/src/components/strategy-editor/: StrategyEditor.tsx
apps/web/src/lib/: api.ts  strategy-validation.ts
apps/web/storage/strategies/custom/: coil-pulse-reverter.ts
apps/web/test/: api.test.ts  date-range.test.ts  new-run-helpers.test.ts  strategy-controls.test.tsx  strategy-validation.test.ts
docs/spec/: 00-master-spec.txt  00-phase-1-spec.txt  01-architecture.md  02-engine.md  03-data-connectors.md  04-strategy-interface.md  05-risk.md  06-metrics.md  07-api.md  08-ui.md  09-quant-cpp.md  10-stats-pod.md  99-glossary.md
ops/proto/: quant.proto
ops/scripts/: check-no-ts-ignore.mjs  reset-runs.mjs
services/api/: package.json  tsconfig.json
services/api/src/: index.ts  queue.ts  server.ts
services/api/src/db/: index.test.ts  index.ts  schema.sql
services/api/src/routes/: data-fetchers.ts  dataset-ensurer.ts  datasets.ts  risk-profiles.ts  runs.ts  stats.ts
services/api/src/types/: parquetjs.d.ts
services/api/storage/datasets/: aapl_1d.csv
services/api/test/: api-routes-errors.test.ts  dataset-ensurer.test.ts  queue.test.ts  runs.e2e.test.js
services/backtest-worker/: package.json  tsconfig.json
services/backtest-worker/src/: index.ts  types.d.ts
services/backtest-worker/test/: backtest-worker.test.ts
services/quant-cpp/: CMakeLists.txt  bootstrap.sh
services/quant-cpp/include/quant/: black_scholes.hpp  grpc_service.hpp  monte_carlo.hpp
services/quant-cpp/src/: black_scholes.cpp  grpc_service.cpp  monte_carlo.cpp  server_main.cpp
services/quant-cpp/tests/: test_black_scholes.cpp  test_monte_carlo.cpp
storage/: api.sqlite  api.sqlite-shm  api.sqlite-wal
storage/datasets/: aapl_1d.csv
storage/strategies/custom/: .gitkeep  README.md  coil-pulse-reverter.ts  example-sma-crossover.ts  simple-sma-crossover.ts
